Compelete with Responsiveness

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               class="d-inline-block align-text-top"
             />
           </a>
-          <ul class="nav justify-content-end">
+          <ul class="nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Features</a>
             </li>
@@ -50,7 +50,7 @@
     <section class="hero">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 order-last">
+          <div class="col-md-6 order-md-first order-sm-last order-2">
             <div class="hero-content">
               <h2 class="heading">
                 All your files in one secure location, accessible anywhere
@@ -77,7 +77,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 order-first">
+          <div class="col-md-6 order-sm-first order-1">
             <div class="hero-img">
               <img
                 src="./images/illustration-1.svg"
@@ -93,11 +93,14 @@
         <div class="curve-img">
             <img src="./images/bg-curve-desktop.svg" class="bg-curve-img" alt="bg-curve" />
         </div>
+        <div class="curve-img-mob">
+            <img src="./images/bg-curve-mobile.svg" class="bg-curve-img-mob" alt="bg-curve-mob" />
+        </div>
     </section>
     <section class="blog">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 order-last">
+            <div class="col-md-6 order-sm-first order-2">
               <div class="blog-content">
                 <h2 class="heading">Stay Productive, Whenever you are</h2>
                 <p class="paragraph">
@@ -119,7 +122,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 order-first">
+            <div class="col-md-6 order-sm-last order-1">
               <div class="blog-img">
                 <img
                   src="./images/illustration-2.svg"
