Compelete with Responsiveness

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     placeholder="Enter your email.."
                     class="get-started-input"
                   />
-                  <button type="button" class="get-started-button">
+                  <button type="submit" class="get-started-button">
                     Get Started
                   </button>
                 </form>
